--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Miniprojekt 1</title>
+    <link rel="icon" href="#" />
     <script src="./javascript/script.js" defer></script>
   </head>
   <body></body>
